# Questbotdiscord

./: .replit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build-macos.sh  build-windows.ps1  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
api/: .env.example  README.md  package.json
api/src/: db.js  discord-runner.js  index.js
attached_assets/: Pasted--txt-id-dljdk3-Desktop-UI-Tauri-Rust-Discord-Bo-1782675_1782675618841.txt  Pasted-2026-07-01T19-27-19-528417555Z-npm-error-src-util-data-_1782934370048.txt  Pasted-2026-07-01T19-34-03-780359918Z-Cloning-from-https-githu_1782935067721.txt  Pasted-2026-07-01T19-34-08-56648294Z-Using-Node-js-version-20-_1782954189219.txt  Pasted-2026-07-02T00-51-27-719463889Z-node-85-DeprecationWarni_1782954258476.txt  Pasted-2026-07-02T01-05-53-104422943Z-Downloading-cache-2026-0_1782954404281.txt  Pasted-2026-07-02T01-12-22-508155536Z-2026-07-02T01-12-27-1095_1782957225138.txt  Pasted-2026-07-02T05-19-48-058873415Z-Downloading-cache-2026-0_1782969674045.txt
bot/: .env.example  README.md  package-lock.json  package.json
bot/data/: quests.db  quests.db-shm  (+2 more)
docs/: CI_PLAN.md
public/: version-desc.txt
scripts/: analyze-har-quests.py  build-cdp-launcher.js  build-runner.js  check-optional-quest-schema-fixture.mjs  i18n-audit.mjs  i18n-validate.mjs  migrate-locales-to-json.mjs  sync-version.js  validate-quest-schema-fixture.py
src/: App.vue  i18n.ts  main.ts  style.css
src-cdp-launcher/: Cargo.toml  build.rs
src-runner/: Cargo.toml  build.rs
src-runner/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cdp_client.rs  cdp_quest.rs  discord_api.rs  discord_cdp_launcher.rs  discord_gateway.rs  game_simulator.rs  lib.rs  logger.rs  main.rs  models.rs  quest_completer.rs  rpc.rs  runner.rs  stealth.rs  super_properties.rs  token_extractor.rs
(+101 files in other folders)
