[package]
name = "discord-quest-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29"
softbuffer = "0.4"

[[bin]]
name = "discord-quest-runner"
path = "src/main.rs"

# Minimize executable size
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
